Changes
-------

10.8
~~~~

* Deprecated ``jaraco.util.functools``. Functionality has been moved to the
  ``jaraco.functools`` package.

10.7.1
~~~~~~

* Fix ``tempora.calculate_prorate`` on Python 3.

10.7
~~~~

* Added methods to ``jaraco.util.WordSet``.

10.6
~~~~

* Added ``dictlib.Enumeration``.

10.5
~~~~

* Moved functionality from words function to ``WordSet.parse``. ``words``
  retained for compatibility.

10.4
~~~~

* WordSet and words results can now be readily sliced.

10.3
~~~~

* Add classproperty to properties module.

10.2
~~~~

* Moved jaraco.util.timing into its own package under jaraco.timing and
  deprecated the module in this package.

10.1
~~~~

* Added ``meta.TagRegistered``.

10.0.2
~~~~~~

* Restore ``itertools.one``, unintentionally removed in 10.0.

10.0.1
~~~~~~

* Restore Python 2 compatibility.

10.0
~~~~

* Removed several itertools recipes now obviated by `more-itertools
  <https://github.com/erikrose/more-itertools>`_ (recipes and more):

  - grouper -> recipes.grouper
  - grouper_nofill -> more.chunked (note parameters are switched)
  - chain -> itertools.chain.from_iterable

  The following can now be found in more_itertools.recipes:

  - pairwise
  - consume
  - roundrobin
  - unique_justseen
  - unique_everseen

* Add logging.setup_requests_logging, following the pattern document at
  `StackOverflow
  <http://stackoverflow.com/questions/10588644/how-can-i-see-the-entire-request-thats-being-sent-to-paypal-in-my-python-applic/16630836#16630836>`_.


9.0.1
~~~~~

* Apply fix in 8.9.1 to 9.0.

9.0
~~~

* ``itertools.one()`` now always raises a ValueError and never a
  StopIteration.

8.9.1
~~~~~

* Use six for callable in NonDataProperty, restoring Python 3.1 compatibility.

8.9
~~~

* Added ``KeyTransformingDict.matching_key_for``, allowing the original key
  to be returned.

8.8
~~~

* Added ``context.ExceptionTrap``.

8.7
~~~

* Removed dependency links for ``six``.

8.6
~~~
