@@ -6,6 +6,8 @@ Changes
 
 * Deprecated ``jaraco.util.functools``. Functionality has been moved to the
   ``jaraco.functools`` package.
+* Deprecated ``jaraco.tempora`` module. Functionality has been moved to the
+  ``tempora`` package.
 
 10.7.1
 ~~~~~~
